2007-09-20  Akim Demaille  <demaille@gostai.com>

	String::+
	* src/object/object.hh (VALUE): New.
	Bad name, agreed.  Please, make it clearer.
	* src/object/float-class.cc: Use it.
	* src/object/primitives.hh: Ditto.
	* src/object/string-class.cc (PRIMITIVE_OP_STRING): Don't work
	on symbols, but on std::string.
	(String::add): New.

2007-09-20  Akim Demaille  <demaille@gostai.com>

	String::print
	* src/ast/ast.yml: Implement it.

2007-09-20  Akim Demaille  <demaille@gostai.com>

	if then else
	* src/ast/ast.yml (If): New.
	* src/parser/bison/ugrammar.y: Build it.
	* src/runner/runner.hh, src/runner/runner.cc: Handle it.
	(AST, JECHO): New macros.  Use them.

2007-09-20  Akim Demaille  <demaille@gostai.com>

	Object::type_is
	* src/object/object.hh (object::kind_is,  object::type_is): New.
	* src/object/object.hxx: implement them.
	* src/object/primitives.hh (TYPE_CHECK): New.
	Use it.
	Extracted from...
	(FETCH_ARG): here.

2007-09-20  Akim Demaille  <demaille@gostai.com>

	CPP Fixes
	* src/object/atom.cc: Remove, unused.
	* src/object/atom.hh: Fix guards.

2007-09-19  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Simplify the parser.
	Patch by Akim Demaille.
	* src/parser/bison/ugrammar.y (root): Simplify the way stmts are
	handled.

2007-09-19  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Be nice to non-SVN users.
	* src/ast/Makefile.am (ignores.stamp): Set svn:ignores only when SVN
	is used.

2007-09-18  Akim Demaille  <demaille@gostai.com>

	Method look up in the object itself
	* src/runner/runner.cc (Call): The parent of the call's local
	object is the target (self).

2007-09-18  Akim Demaille  <demaille@gostai.com>

	Tidy the grammar
	* src/parser/bison/ugrammar.y: Classify stmt rules.
	Reactivate some of the rules.

2007-09-18  Akim Demaille  <demaille@gostai.com>

	Propagate k1_id
	* src/parser/bison/ugrammar.y (name): Remove, replaced by k1_id.

2007-09-18  Akim Demaille  <demaille@gostai.com>

	Dead code